we ensures that user cant't add blank todo (and all possible cases covered)

--- a/app/assets/stylesheets/home.css
+++ b/app/assets/stylesheets/home.css
@@ -22,3 +22,8 @@
   display: flex;
   justify-content: space-between;
 }
+.flash_error{
+  color: darkred;
+  margin-top: 10px;
+  font-weight: 700;
+}
